--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.1.0",
+    "@angular/animations": "^9.1.0",
     "@angular/cdk": "^9.2.0",
     "@angular/common": "~9.1.0",
     "@angular/compiler": "~9.1.0",
@@ -33,6 +33,7 @@
     "mongoose": "^5.9.6",
     "mongoose-unique-validator": "^2.0.3",
     "multer": "^1.4.2",
+    "ngx-webcam": "^0.3.0",
     "nodemailer": "^6.4.6",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "nodemon": "^2.0.2",
