--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express-validator": "^6.4.0",
     "jquery": "^3.5.0",
     "jsonwebtoken": "^8.5.1",
+    "mat-table-exporter": "^9.0.2",
     "mongoose": "^5.9.7",
     "mongoose-unique-validator": "^2.0.3",
     "multer": "^1.4.2",
@@ -41,7 +42,7 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.901.1",
+    "@angular-devkit/build-angular": "^0.1001.1",
     "@angular/cli": "^9.1.1",
     "@angular/compiler-cli": "^9.1.1",
     "@angular/language-service": "^9.1.1",
