--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "multer": "^1.4.2",
     "dotenv": "^8.2.0",
     "nodemailer": "^6.4.6",
+    "twilio": "^3.49.1",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "nodemon": "^2.0.2"
   }
