--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "nodemon": "^2.0.3",
     "rxjs": "^6.5.5",
     "tslib": "^1.10.0",
+    "twilio": "^3.49.1",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
