--- a/package.json
+++ b/package.json
@@ -22,19 +22,23 @@
     "@angular/platform-browser": "^9.1.1",
     "@angular/platform-browser-dynamic": "^9.1.1",
     "@angular/router": "^9.1.1",
+    "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "bcryptjs": "^2.4.3",
     "datatables.net": "^1.10.20",
     "datatables.net-dt": "^1.10.20",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.4.0",
+    "html2canvas": "^1.0.0-rc.7",
     "jquery": "^3.5.0",
     "jsonwebtoken": "^8.5.1",
+    "jspdf": "^2.1.1",
     "mat-table-exporter": "^9.0.2",
     "mongoose": "^5.9.7",
     "mongoose-unique-validator": "^2.0.3",
     "multer": "^1.4.2",
     "nexmo": "^2.9.1",
+    "ngx-print": "^1.2.0-beta.5",
     "ngx-webcam": "^0.3.0",
     "nodemailer": "^6.4.6",
     "nodemailer-sendgrid-transport": "^0.2.0",
