--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^9.1.1",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^4.5.2",
     "datatables.net": "^1.10.20",
     "datatables.net-dt": "^1.10.20",
     "dotenv": "^8.2.0",
@@ -39,6 +40,7 @@
     "multer": "^1.4.2",
     "nexmo": "^2.9.1",
     "ngx-print": "^1.2.0-beta.5",
+    "ngx-spinner": "^10.0.1",
     "ngx-webcam": "^0.3.0",
     "nodemailer": "^6.4.6",
     "nodemailer-sendgrid-transport": "^0.2.0",
