--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "jsonwebtoken": "^8.5.1",
     "jspdf": "^2.1.1",
     "mat-table-exporter": "^9.0.2",
-    "mongoose": "^5.9.7",
+    "mongoose": "^5.12.0",
     "mongoose-unique-validator": "^2.0.3",
     "multer": "^1.4.2",
     "nexmo": "^2.9.1",
@@ -47,12 +47,12 @@
     "nodemon": "^2.0.3",
     "rxjs": "^6.5.5",
     "tslib": "^1.10.0",
-    "twilio": "^3.49.1",
+    "twilio": "^3.57.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1001.1",
-    "@angular/cli": "^9.1.1",
+    "@angular-devkit/build-angular": "^0.1102.4",
+    "@angular/cli": "^11.2.4",
     "@angular/compiler-cli": "^9.1.1",
     "@angular/language-service": "^9.1.1",
     "@types/datatables.net": "^1.10.19",
@@ -63,12 +63,12 @@
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.4.1",
+    "karma": "^6.2.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~3.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
-    "protractor": "~5.4.3",
+    "protractor": "^7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "^6.1.1",
     "typescript": "~3.8.3"
